# ktan

./: README  README.md  configure.ac
data/: Makefile.am
doc/: Makefile.am  kacq.texi
src/: Makefile.am  acquisition.cpp  acquisition.h  channelGroup.cpp  channelGroup.cpp~  channelGroup.h  channelGroup.h~  dataBuffer.cpp  dataBuffer.h  kacqtan.glade  ktan.glade  ktanCopyUserConfig.sh  ktanPositrackTrial.sh  ktanStartStop.c  main.c  main.cpp  main.h  mainWindow.cpp  mainWindow.h  okFrontPanelDLL.cpp  okFrontPanelDLL.h  oscilloscope.cpp  oscilloscope.h  positrack_shared_memory.h  recording.cpp  recording.h  rhd2000datablock.cpp  rhd2000evalboard.cpp  rhd2000evalboard.h  shared_memory.cpp  shared_memory.h  shared_memory_data.cpp
