imagesdir = $(datadir)
dist_images_DATA = gtk_zoom_in_time.png gtk_zoom_in_volt.png gtk_zoom_out_time.png gtk_zoom_out_volt.png ktan_icon.png
mapdir = $(datadir)
dist_map_DATA = libokFrontPanel.so main.bit

## we should try to find a way so that we don't have to set the udev directory ourself
udevrulesdir=/etc/udev/rules.d/
udevrules_DATA = 60-opalkelly.rules
